--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 8.5
 j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 8.5
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=C:\\Users\\\u9648\u5bb8\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
